--- a/README
+++ b/README
@@ -1,1 +1,3 @@
 This file was created by IntelliJ IDEA 12.0 for binding GitHub repository
+Part of Project for Creating Management System
+Using MySQL database and JAVA, JGIT.
